--- a/psrc_hts_tutorial.ipynb
+++ b/psrc_hts_tutorial.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mg/5x982c514sl0dc5v1pd9gj580000gn/T/ipykernel_4045/1582395391.py:3: DtypeWarning: Columns (5,8,25,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,52,68,69,73,75,76,86,87,88,89,90,91,92,93,94,95,96,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,130,131,132,133,134,135,136,137,138,139,140,142,154) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/mg/5x982c514sl0dc5v1pd9gj580000gn/T/ipykernel_5646/1582395391.py:3: DtypeWarning: Columns (5,8,25,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,52,68,69,73,75,76,86,87,88,89,90,91,92,93,94,95,96,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,130,131,132,133,134,135,136,137,138,139,140,142,154) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  trips = pd.read_csv(\"data/Household_Travel_Survey_Trips.csv\")\n",
-      "/var/folders/mg/5x982c514sl0dc5v1pd9gj580000gn/T/ipykernel_4045/1582395391.py:4: DtypeWarning: Columns (1,3,7,23,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,77,78,81,84,85,95,96,97,98,99,100,101,102,103,104,105,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,135,136,137,138,139,140,141,142,143,144,145,146) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/mg/5x982c514sl0dc5v1pd9gj580000gn/T/ipykernel_5646/1582395391.py:4: DtypeWarning: Columns (1,3,7,23,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,77,78,81,84,85,95,96,97,98,99,100,101,102,103,104,105,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,135,136,137,138,139,140,141,142,143,144,145,146) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  persons = pd.read_csv(\"data/Household_Travel_Survey_Persons.csv\")\n"
      ]
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "Name: daynum, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,16 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7fdfe92ad1c0>"
+       "<matplotlib.lines.Line2D at 0x7fb631f760d0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "Name: travel_time, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "Name: travel_time, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,14 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mg/5x982c514sl0dc5v1pd9gj580000gn/T/ipykernel_4045/548063521.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/mg/5x982c514sl0dc5v1pd9gj580000gn/T/ipykernel_5646/548063521.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "Name: travel_time_calc, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "[110247 rows x 6 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "Text(0.5, 1.0, 'Distribution of Travel Times in 2017, Weight Comparison')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -816,16 +816,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe03c68b220>"
+       "<matplotlib.legend.Legend at 0x7fb631f76a60>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
        " 'max': 119.0}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
        "[24672 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1219,7 @@
        "[24672 rows x 6 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1324,7 @@
      "text": [
       "/Users/kaitlynng/opt/anaconda3/lib/python3.9/site-packages/geopandas/plotting.py:51: ShapelyDeprecationWarning: The 'type' attribute is deprecated, and will be removed in the future. You can use the 'geom_type' attribute instead.\n",
       "  if geom is not None and geom.type.startswith(prefix) and not geom.is_empty:\n",
-      "/var/folders/mg/5x982c514sl0dc5v1pd9gj580000gn/T/ipykernel_4045/3251347616.py:5: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/var/folders/mg/5x982c514sl0dc5v1pd9gj580000gn/T/ipykernel_5646/3251347616.py:5: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -1358,232 +1358,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>household_id</th>\n",
-       "      <th>person_dim_id</th>\n",
-       "      <th>trip_id</th>\n",
-       "      <th>hhid</th>\n",
-       "      <th>survey_year</th>\n",
-       "      <th>sample_source</th>\n",
-       "      <th>seattle_home</th>\n",
-       "      <th>hh_race_category</th>\n",
-       "      <th>hhgroup</th>\n",
-       "      <th>sample_county</th>\n",
-       "      <th>...</th>\n",
-       "      <th>trip_weight_2017_2019_v2021</th>\n",
-       "      <th>trip_weight_2017_2019_v2021_adu</th>\n",
-       "      <th>ObjectId</th>\n",
-       "      <th>travel_time_calc</th>\n",
-       "      <th>person_id</th>\n",
-       "      <th>origin_lat</th>\n",
-       "      <th>origin_lng</th>\n",
-       "      <th>dest_lat</th>\n",
-       "      <th>dest_lng</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>21200609</td>\n",
-       "      <td>2120060902</td>\n",
-       "      <td>2120060902001</td>\n",
-       "      <td>21200609</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>ABS</td>\n",
-       "      <td>Home in Seattle</td>\n",
-       "      <td>White Only</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>King</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2120060902</td>\n",
-       "      <td>47.66413</td>\n",
-       "      <td>-122.31606</td>\n",
-       "      <td>47.66474</td>\n",
-       "      <td>-122.31450</td>\n",
-       "      <td>POINT (-122.31606 47.66413)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>21200609</td>\n",
-       "      <td>2120060902</td>\n",
-       "      <td>2120060902002</td>\n",
-       "      <td>21200609</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>ABS</td>\n",
-       "      <td>Home in Seattle</td>\n",
-       "      <td>White Only</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>King</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2120060902</td>\n",
-       "      <td>47.66474</td>\n",
-       "      <td>-122.31450</td>\n",
-       "      <td>47.66413</td>\n",
-       "      <td>-122.31606</td>\n",
-       "      <td>POINT (-122.31450 47.66474)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>21200651</td>\n",
-       "      <td>2120065101</td>\n",
-       "      <td>2120065101001</td>\n",
-       "      <td>21200651</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>ABS</td>\n",
-       "      <td>Home in Seattle</td>\n",
-       "      <td>White Only</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>King</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>2120065101</td>\n",
-       "      <td>47.54014</td>\n",
-       "      <td>-122.29305</td>\n",
-       "      <td>47.64714</td>\n",
-       "      <td>-122.33256</td>\n",
-       "      <td>POINT (-122.29305 47.54014)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>21200651</td>\n",
-       "      <td>2120065101</td>\n",
-       "      <td>2120065101002</td>\n",
-       "      <td>21200651</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>ABS</td>\n",
-       "      <td>Home in Seattle</td>\n",
-       "      <td>White Only</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>King</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>2120065101</td>\n",
-       "      <td>47.64714</td>\n",
-       "      <td>-122.33256</td>\n",
-       "      <td>47.54014</td>\n",
-       "      <td>-122.29305</td>\n",
-       "      <td>POINT (-122.33256 47.64714)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>21200651</td>\n",
-       "      <td>2120065101</td>\n",
-       "      <td>2120065101003</td>\n",
-       "      <td>21200651</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>ABS</td>\n",
-       "      <td>Home in Seattle</td>\n",
-       "      <td>White Only</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>King</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2120065101</td>\n",
-       "      <td>47.54014</td>\n",
-       "      <td>-122.29305</td>\n",
-       "      <td>47.61828</td>\n",
-       "      <td>-122.33787</td>\n",
-       "      <td>POINT (-122.29305 47.54014)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 185 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   household_id  person_dim_id        trip_id      hhid  survey_year  \\\n",
-       "0      21200609     2120060902  2120060902001  21200609         2021   \n",
-       "1      21200609     2120060902  2120060902002  21200609         2021   \n",
-       "2      21200651     2120065101  2120065101001  21200651         2021   \n",
-       "3      21200651     2120065101  2120065101002  21200651         2021   \n",
-       "4      21200651     2120065101  2120065101003  21200651         2021   \n",
-       "\n",
-       "  sample_source     seattle_home hh_race_category hhgroup sample_county  ...  \\\n",
-       "0           ABS  Home in Seattle       White Only     NaN          King  ...   \n",
-       "1           ABS  Home in Seattle       White Only     NaN          King  ...   \n",
-       "2           ABS  Home in Seattle       White Only     NaN          King  ...   \n",
-       "3           ABS  Home in Seattle       White Only     NaN          King  ...   \n",
-       "4           ABS  Home in Seattle       White Only     NaN          King  ...   \n",
-       "\n",
-       "   trip_weight_2017_2019_v2021 trip_weight_2017_2019_v2021_adu ObjectId  \\\n",
-       "0                          NaN                             NaN        1   \n",
-       "1                          NaN                             NaN        2   \n",
-       "2                          NaN                             NaN        3   \n",
-       "3                          NaN                             NaN        4   \n",
-       "4                          NaN                             NaN        5   \n",
-       "\n",
-       "  travel_time_calc   person_id origin_lat origin_lng  dest_lat   dest_lng  \\\n",
-       "0              5.0  2120060902   47.66413 -122.31606  47.66474 -122.31450   \n",
-       "1              5.0  2120060902   47.66474 -122.31450  47.66413 -122.31606   \n",
-       "2             25.0  2120065101   47.54014 -122.29305  47.64714 -122.33256   \n",
-       "3             25.0  2120065101   47.64714 -122.33256  47.54014 -122.29305   \n",
-       "4             15.0  2120065101   47.54014 -122.29305  47.61828 -122.33787   \n",
-       "\n",
-       "                      geometry  \n",
-       "0  POINT (-122.31606 47.66413)  \n",
-       "1  POINT (-122.31450 47.66474)  \n",
-       "2  POINT (-122.29305 47.54014)  \n",
-       "3  POINT (-122.33256 47.64714)  \n",
-       "4  POINT (-122.29305 47.54014)  \n",
-       "\n",
-       "[5 rows x 185 columns]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# merge trip and o/d data\n",
-    "trips_od = pd.merge(trips_clean, od, on=[\"trip_id\", \"household_id\"], how=\"left\")\n",
-    "trips_od.head()"
+    "trips_od = pd.merge(trips_clean, od, on=[\"trip_id\", \"household_id\"], how=\"left\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1646,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
